--- a/src/service/styles/_mixins.scss
+++ b/src/service/styles/_mixins.scss
@@ -22,4 +22,5 @@
   hyphenate-limit-lines: 2;
   hyphenate-limit-last: always;
   hyphenate-limit-zone: 8%;
+  overflow-wrap: break-word;
 }
